Change Firebase configuration settings
Updated Firebase configuration with new project details.

--- a/index.html
+++ b/index.html
@@ -992,12 +992,12 @@
 
     // Firebase 設定
     const firebaseConfig = {
-      apiKey: "AIzaSyD-j2mxePfU6qj4qMXR_-u-VXuzpv-zEkg",
-      authDomain: "team-kanban-f58ae.firebaseapp.com",
-      projectId: "team-kanban-f58ae",
-      storageBucket: "team-kanban-f58ae.firebasestorage.app",
-      messagingSenderId: "15717920457",
-      appId: "1:15717920457:web:42b4491eea9486f9e42718"
+      apiKey: "AIzaSyA_CDIvCpgWH55WIL_PGUcKx5eyLIS_UpQ",
+      authDomain: "tn-kanban.firebaseapp.com",
+      projectId: "tn-kanban",
+      storageBucket: "tn-kanban.firebasestorage.app",
+      messagingSenderId: "827858027115",
+      appId: "1:827858027115:web:613895649b718ca0a0672e"
     };
 
     // 初始化 Firebase
