--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="flex items-center justify-between">
           <!-- 左側：標題和看板選擇 -->
           <div class="flex items-center space-x-4">
-            <h1 class="text-xl font-bold text-gray-800 whitespace-nowrap">📋 團隊看板</h1>
+            <h1 class="text-xl font-bold text-gray-800 whitespace-nowrap">📋 台南團隊看板</h1>
             
             <!-- 看板選擇 -->
             <div class="flex items-center space-x-2">
